--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" src="style.css">
 </head>
 <body>
+
+  <p> Learning git. Branching and Merging conflicts</p>
   
 </body>
 </html>
